dataset1235/2025-2/805158916/users/3229587912/executions/2118643220_874045616.log
== SUBMISSION (2025-09-01 15:27:59)
-- CODE: 
peso_saco = float(input("digite o peso do saco de ração em gramas: "))
ração_diaria = float(input("digite a quantidade diária de uma ração em grama: "))
racao_consumida = peso_saco-(ração_diaria *6)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:32:26)
-- CODE: 
peso_saco = float(input("digite o peso do saco de ração em gramas: "))
ração_diaria = float(input("digite a quantidade diária de uma ração em grama: "))
racao_consumida = peso_saco-(ração_diaria * 6)
print(round)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama: <built-in function round>
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama: <built-in function round>
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama: <built-in function round>
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama: <built-in function round>
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama: <built-in function round>
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama: <built-in function round>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:30:50)
-- CODE: 
peso_saco = float(input("digite o peso do saco de ração em gramas: "))
ração_diaria = float(input("digite a quantidade diária de uma ração em grama: "))
racao_consumida = peso_saco-(ração_diaria * 6)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:53:58)
-- CODE: 
peso_saco = float(input("digite o peso do saco de ração em gramas: "))
ração_diaria = float(input("digite a quantidade diária de uma ração em grama: "))
racao_consumida = peso_saco-(ração_diaria *4)
(round)(racao_consumida,2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:42:51)
-- CODE: 
peso_saco = float(input("digite o peso do saco de ração em gramas: "))
ração_diaria = float(input("digite a quantidade diária de uma ração em grama: "))
racao_consumida = peso_saco-(ração_diaria * 6)
print(round)(racao_consumida,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,2)
TypeError: 'NoneType' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 16:00:09)
-- CODE: 
peso_saco = float(input("digite o peso do saco de ração em gramas: "))
ração_diaria = float(input("digite a quantidade diária de uma ração em grama: "))
racao_consumida = peso_saco-(ração_diaria *4)
print(round)(racao_consumida,3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,3)
TypeError: 'NoneType' object is not callable
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,3)
TypeError: 'NoneType' object is not callable
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,3)
TypeError: 'NoneType' object is not callable
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,3)
TypeError: 'NoneType' object is not callable
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,3)
TypeError: 'NoneType' object is not callable
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,3)
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:29:01)
-- CODE: 
peso_saco = float(input("digite o peso do saco de ração em gramas: "))
ração_diaria = float(input("digite a quantidade diária de uma ração em grama: "))
racao_consumida = peso_saco-(ração_diária * 6)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária * 6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária * 6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária * 6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária * 6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária * 6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária * 6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:28:56)
-- CODE: 
peso_saco = float(input("digite o peso do saco de ração em gramas: "))
ração_diaria = float(input("digite a quantidade diária de uma ração em grama: "))
racao_consumida = peso_saco-(ração_diária * 6)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária * 6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária * 6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária * 6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária * 6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária * 6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária * 6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:28:12)
-- CODE: 
peso_saco = float(input("digite o peso do saco de ração em gramas: "))
ração_diaria = float(input("digite a quantidade diária de uma ração em grama: "))
racao_consumida = peso_saco-(ração_diária *6)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária *6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária *6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária *6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária *6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária *6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    racao_consumida = peso_saco-(ração_diária *6)
                                 ^^^^^^^^^^^^
NameError: name 'ração_diária' is not defined. Did you mean: 'ração_diaria'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:37:23)
-- CODE: 
peso_saco = float(input("digite o peso do saco de ração em gramas: "))
ração_diaria = float(input("digite a quantidade diária de uma ração em grama: "))
racao_consumida = peso_saco-(ração_diaria * 6)
print(round)(racao_consumida,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round)(racao_consumida,2)
TypeError: 'NoneType' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:53:56)
-- CODE: 
peso_saco = float(input("digite o peso do saco de ração em gramas: "))
ração_diaria = float(input("digite a quantidade diária de uma ração em grama: "))
racao_consumida = peso_saco-(ração_diaria *4)
(round)(racao_consumida,2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
digite o peso do saco de ração em gramas: digite a quantidade diária de uma ração em grama:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
